[package]
name = "treeup"
license = "MIT or Apache-2.0"
authors = ["Taxrosdev"]
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
blake3 = { version = "1.8", features = ["mmap", "rayon"] }
reqwest = { version = "0.13", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "^1.53", features = ["fs"] }
stringlike = { git = "https://github.com/Taxrosdev/StringLike.git", features = ["serde"] }

[dev-dependencies]
temp-dir = "0.2.0"
tokio = { version = "^1.53", features = ["macros"] }

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]


